# serializer version: 1
# name: test_sensors[sensor.example_com_cert_expiry-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.example_com_cert_expiry',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cert expiry',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Cert expiry',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'certificate_expiry',
    'unique_id': 'example.com:443-timestamp',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_cert_expiry-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      'error': None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Cert expiry',
      'is_valid': True,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_cert_expiry',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2020-09-20T15:01:00+00:00',
  })
# ---
# name: test_sensors[sensor.example_com_certificate_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'v1',
        'v3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_certificate_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Certificate version',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Certificate version',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'certificate_version',
    'unique_id': 'example.com:443-certificate_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_certificate_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Certificate version',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'v1',
        'v3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_certificate_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'v3',
  })
# ---
# name: test_sensors[sensor.example_com_cipher_suite-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_cipher_suite',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cipher suite',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cipher suite',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cipher_suite',
    'unique_id': 'example.com:443-cipher_suite',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_cipher_suite-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Cipher suite',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_cipher_suite',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'TLS_AES_256_GCM_SHA384',
  })
# ---
# name: test_sensors[sensor.example_com_common_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_common_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Common name',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Common name',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'common_name',
    'unique_id': 'example.com:443-common_name',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_common_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Common name',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_common_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'example.com',
  })
# ---
# name: test_sensors[sensor.example_com_fingerprint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_fingerprint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fingerprint',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fingerprint',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fingerprint',
    'unique_id': 'example.com:443-fingerprint',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_fingerprint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Fingerprint',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_fingerprint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '29:4B:2B:87:4A:B2:97:E6:93:DF:92:FA:81:56:80:41:4D:FD:3D:EE:53:EC:3F:5B:7E:F2:70:C3:BF:71:4D:C3',
  })
# ---
# name: test_sensors[sensor.example_com_issuer_common_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_issuer_common_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Issuer common name',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Issuer common name',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'issuer_common_name',
    'unique_id': 'example.com:443-issuer_common_name',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_issuer_common_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Issuer common name',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_issuer_common_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'example.com',
  })
# ---
# name: test_sensors[sensor.example_com_issuer_organization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_issuer_organization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Issuer organization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Issuer organization',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'issuer_organization',
    'unique_id': 'example.com:443-issuer_organization',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_issuer_organization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Issuer organization',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_issuer_organization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.example_com_organization-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_organization',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Organization',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Organization',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'organization',
    'unique_id': 'example.com:443-organization',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_organization-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Organization',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_organization',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.example_com_organizational_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_organizational_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Organizational unit',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Organizational unit',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'organizational_unit',
    'unique_id': 'example.com:443-organizational_unit',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_organizational_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Organizational unit',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_organizational_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensors[sensor.example_com_serial_number-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_serial_number',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Serial number',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Serial number',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'serial_number',
    'unique_id': 'example.com:443-serial_number',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_serial_number-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com Serial number',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_serial_number',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1234ABCD',
  })
# ---
# name: test_sensors[sensor.example_com_tls_version-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'tls_1_0',
        'tls_1_1',
        'tls_1_2',
        'tls_1_3',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.example_com_tls_version',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'TLS version',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'TLS version',
    'platform': 'cert_expiry',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tls_version',
    'unique_id': 'example.com:443-tls_version',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.example_com_tls_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'example.com TLS version',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'tls_1_0',
        'tls_1_1',
        'tls_1_2',
        'tls_1_3',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.example_com_tls_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'tls_1_3',
  })
# ---
